--- a/PART1/app/src/main/res/values/themes.xml
+++ b/PART1/app/src/main/res/values/themes.xml
@@ -5,5 +5,10 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="Theme.BottomNavigationView.ActiveIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@android:color/transparent</item>
+    </style>
+
+
     <style name="Theme.CurrencyConverter" parent="Base.Theme.CurrencyConverter" />
 </resources>
