--- a/PART1/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/PART1/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
+
+
+    <TextView
+        android:textStyle="bold"
+        android:textSize="@dimen/_20sdp"
+        android:gravity="center"
+        android:text="@string/select_currency"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     
     <androidx.recyclerview.widget.RecyclerView
+        android:padding="@dimen/_10sdp"
         android:id="@+id/rcv_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
