--- a/PART1/app/src/main/res/layout/activity_main.xml
+++ b/PART1/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/drawer_layout"
     android:layout_height="match_parent"
     android:layout_gravity="fill_vertical"
     tools:context=".MainActivity">
@@ -32,13 +31,13 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
                 <TextView
-                    android:textSize="@dimen/_20sdp"
-                    android:text="@string/currency_convertor"
                     android:id="@+id/toolbar_title"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                    android:layout_gravity="center" />
+                    android:layout_gravity="center"
+                    android:text="@string/currency_convertor"
+                    android:textSize="@dimen/_20sdp" />
             </androidx.appcompat.widget.Toolbar>
 
 
@@ -54,14 +53,14 @@
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/myBottomNav"
-                app:labelVisibilityMode="labeled"
-                app:itemTextAppearanceActiveBoldEnabled="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_bottom_nav"
                 app:itemActiveIndicatorStyle="@style/Theme.BottomNavigationView.ActiveIndicator"
                 app:itemIconTint="@color/custom_color_nav"
+                app:itemTextAppearanceActiveBoldEnabled="true"
                 app:itemTextColor="@color/custom_color_nav"
+                app:labelVisibilityMode="labeled"
                 app:menu="@menu/bottom_nav" />
 
         </LinearLayout>
@@ -69,9 +68,7 @@
     </RelativeLayout>
 
 
-
-
-</androidx.drawerlayout.widget.DrawerLayout>
+</LinearLayout>
 
 
 
