--- a/PART1/app/src/main/res/layout/fragment_home.xml
+++ b/PART1/app/src/main/res/layout/fragment_home.xml
@@ -29,6 +29,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvCode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="INR"
@@ -86,6 +87,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvCode1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/usd"
@@ -127,6 +129,7 @@
         </LinearLayout>
 
         <ImageButton
+            android:id="@+id/btnChange"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/layout"
