--- a/PART1/app/src/main/res/layout/fragment_chart.xml
+++ b/PART1/app/src/main/res/layout/fragment_chart.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/_10sdp"
-    tools:context=".Fragments.ChartFragment">
+    tools:context=".fragments.ChartFragment">
 
     <Spinner
         android:id="@+id/planets_spinner"
