--- a/PART1/app/src/main/res/layout/fragment_home.xml
+++ b/PART1/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Fragments.HomeFragment">
+    tools:context=".fragments.HomeFragment">
 
 
     <RelativeLayout
@@ -148,8 +148,7 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:gravity="center"
-        android:padding="@dimen/_5sdp" />
+        android:gravity="center" />
 
 
 </LinearLayout>
