--- a/PART1/app/src/main/res/layout/fragment_news.xml
+++ b/PART1/app/src/main/res/layout/fragment_news.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.NewsFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <data>
+
+        <variable
+            name="isLoadingArticle"
+            type="Boolean" />
+
+        <import type="android.view.View" />
+    </data>
+
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
+        tools:context=".fragments.NewsFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvFragmentBreaking"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:visibility="@{isLoadingArticle?View.GONE:View.VISIBLE,default=visible}" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="gone" />
+            android:layout_gravity="center"
+            android:visibility="@{isLoadingArticle?View.VISIBLE:View.GONE,default=gone}" />
 
-    </RelativeLayout>
+    </FrameLayout>
 
-
-</LinearLayout>
+</layout>
